<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.history.HistoryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_rounded_bg"
            android:paddingStart="24dp"
            android:paddingTop="32dp"
            android:paddingEnd="24dp"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/tv_title_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/riwayat_scan"
                android:textSize="20sp"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                android:fontFamily="@font/anta"
                android:textColor="@color/white"
                android:lineSpacingMultiplier="1.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_subtitle_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/subtagline_history"
                android:textColor="@color/white"
                android:fontFamily="@font/opensans"
                android:textSize="14sp"
                android:lineSpacingExtra="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_history"/>

            <SearchView
                android:id="@+id/sv_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/white"
                android:iconifiedByDefault="false"
                android:queryHint="@string/search_history"
                android:searchIcon="@drawable/ic_search_24"
                android:closeIcon="@drawable/ic_close_24"
                android:theme="@style/SearchViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle_history"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistoryScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:clipToPadding="false"
            android:paddingBottom="16dp"/>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>